--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link
+		rel="icon" href="https://img.freepik.com/vecteurs-premium/creation-logo-ecole-education_586739-1314.jpg?w=2000">
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		{% block stylesheets %}
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+		{% endblock %}
+		{% block javascript %}
+					<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+		{% endblock %}
+
+	</head>
+	<body>
+		<div>
+			<nav class="navbar navbar-expand-lg bg-secondary gap-3 fixed-top">
+				<img src="https://img.freepik.com/vecteurs-premium/creation-logo-ecole-education_586739-1314.jpg?w=2000" width="50px" class="rounded-circle ms-2"/>
+				<div class=" ms-2">
+					<a class="text-decoration-none text-light" href="{{ path('app_home') }}">Home</a>
+				</div>
+				{% if app.user %}
+					<div>
+						<a class="text-decoration-none text-light" href="{{ path('app_etudiants_index') }}">Liste etudiants</a>
+					</div>
+					<div>
+						<a class="btn btn-sm btn-danger" href="{{ path('app_logout') }}">Déconnexion</a>
+					</div>
+				{% else %}
+					<div>
+						<a class="btn btn-sm btn-primary" href="{{ path('app_register') }}">S'inscrire</a>
+						<a class="btn btn-sm btn-success" href="{{ path('app_login') }}">Se connecter</a>
+					</div>
+				{% endif %}
+			</nav>
+		</div>
+		<div class="container" style="margin-top:60px"> 
+		{% block body %}{% endblock %}
+			</div>
+		</body>
+	</html>
